--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ google-auth==2.38.0
 greenlet==3.1.1
 griffe==1.7.1
 groq==0.20.0
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httplib2==0.20.2
